public/static/stylesheets/makedetails.less
@import "fonts";

/*********************************************************
 * MAKE DETAILS
 */
body {
  margin: 0;
  padding: 0;
}
.make-bar-link {
  color: #27aae1;
  text-decoration: none;
}
.make-bar-link:hover {
  color: #54bce7;
}
.make-details-page {
  .make-bar-wrapper {
    position: relative;
    width: 100%;
    margin: 0 auto;
  }
  &.no-details {
    display: none;
  }
}

.make-bar {
  background: #e3eaee;
  height: 37px;
  border-top: 1px solid #cdd9e1;
  border-bottom: 1px solid #d3dee4;
  padding: 0 10px;
  width: 100%;
  z-index: 5;
  box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
  font-family: "Open Sans", sans-serif;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -ms-box-sizing: border-box;
  box-sizing: border-box;
}
.make-bar .make-bar-button {
  margin-top: 2px;
  color: white;
  background: #3fb58e;
  list-style: none;
  float: right;
  font-size: 13px;
  text-align: center;
  border: 1px solid #FFF;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -ms-box-sizing: border-box;
  box-sizing: border-box;
}
.make-bar .make-bar-button a {
  color: #FFF;
  padding: 0.4em 1em 0.4em;
}
.make-bar .make-bar-button:hover {
  background: #60c7a5;
}
.make-bar .make-bar-logospan {
  float: left;
  width: 180px;
  height: 35px;
}
.make-bar .make-bar-logospan img {
  margin-top: 4px;
  height: 32px;
}
.make-bar .make-bar-logospan .make-bar-made-with {
  font-size: 13px;
  color: #787878;
  position: relative;
  display: inline-block;
  left: 5px;
  bottom: 13px;
}
.make-bar .make-bar-expand-collapse {
  color: #27aae1;
  position: absolute;
  right: 180px;
  left: 180px;
  top: 0;
  bottom: 0;
  text-align: center;
  vertical-align: top;
  font-size: 18px;
  padding-top: 6px;
  cursor: pointer;
  *zoom: 1;
  display: inline-block;
}
.make-bar .make-bar-expand-collapse:hover {
  color: #54bce7;
}
.make-bar .make-bar-expand-collapse:before,
.make-bar .make-bar-expand-collapse:after {
  content: "";
  display: table;
}
.make-bar .make-bar-expand-collapse:after {
  clear: both;
}
.make-bar .make-bar-expand-collapse:after {
  content: '.';
  display: block;
  clear: both;
  visibility: hidden;
  line-height: 0;
  height: 0;
}
.make-bar .make-bar-expand-collapse .toggle-ec {
  width: 100%;
}
.make-bar .make-bar-expand-collapse img {
  margin-left: 2px;
  margin-bottom: 2px;
}
.make-bar .make-social {
  margin-left: 9px;
  vertical-align: top;
  *zoom: 1;
  display: inline-block;
}
.make-bar .make-social:before,
.make-bar .make-social:after {
  content: "";
  display: table;
}
.make-bar .make-social:after {
  clear: both;
}
.make-bar .make-social:after {
  content: '.';
  display: block;
  clear: both;
  visibility: hidden;
  line-height: 0;
  height: 0;
}
.make-details {
  height: 300px;
}
.make-details.hide {
  display: none;
}
#make-details-iframe,
.embed-iframe {
  border: none;
  width: 100%;
  height: 100%;
}

.embed-container {
  position: fixed;
  top: 37px;
  &.no-details {
    top: 0;
  }
  &.open {
    top: 337px;
  }
  left: 0;
  right: 0;
  bottom: 0;
  transition: top .2s ease-in-out;
  -moz-transition: top .2s ease-in-out;
  -webkit-transition: top .2s ease-in-out;
  -o-transition: top .2s ease-in-out;
  -ms-transition: top .2s ease-in-out;
}


.make-bar-button-remix {
  background-repeat: no-repeat;
  background-position: left 3px;
  display: block;
  margin-left: 5px;
  margin-top: 2px;
}
.make-bar-button-remix span {
  position: relative;
  bottom: 2px;
  left: 5px;
}
.make-bar-button-remix {
  background-image: url("/static/images/icon-Remix.png");
}


@media (max-width: 640px) {
 .make-bar .make-bar-logospan .make-bar-made-with {
    display: none;
  }
  .make-bar .make-bar-expand-collapse {
    left: 50px;
    right: 80px;
  }
}


/*********************************************************
* Popcorn maker embed media queries
*/

@controlsHeight: 43px;
@small: 560px;
@medium: 640px;
@large: 853px;
@xlarge: 1280px;

.height-width( @width ) {
  width: @width;
  height: (.5625 * @width ) + @controlsHeight;
}

.popcorn.embed-container {
  margin: 0 auto;
  padding-top: 2em;
  position: static;
}

.popcorn.embed-iframe {
  width: 100%;
  height: 100%;
}

@media only screen and ( max-width: @medium ) {
  .popcorn.embed-container {
    .height-width( @small );
  }
}

@media only screen and ( min-width: @medium ) {
  .popcorn.embed-container {
    .height-width( @medium );
  }
}

@media only screen and ( min-width: @large ) {
  .popcorn.embed-container {
    .height-width( @large );
  }
}

@media only screen and ( min-width: @xlarge ) {
  .popcorn.embed-container {
    .height-width( @xlarge );
  }
}

